# PlantDiseaseDetectionProject

./: .gitignore  CHANGELOG.md  GRADCAM_EXPLAINABILITY.md  Instruction.md  PROJECT_SUMMARY.md  Project Proposal.docx  README.md  TODO.md  TRAINING_FINETUNE_STATS.md  VALIDATION_GUIDE.md  report.md  version.json
.github/: README.md
AndroidApp/: .gitignore  README.md  settings.gradle.kts
PlantDiseaseDetectionKnowledge/: 00_Index.md  01 Inference_TFLite.md  02 Inference_Preprocess.md  03 Delegates.md  04 Training_Loop.md  05 Data_Split_Sampler.md  06 Augmentation_and_Masking.md  07 Preprocess_Export_Confusion.md  PlantDiseaseDetection_CodeReview.md
SourceCode/: .gitignore  LICENSE  README.md  TODO.md  TRAINING_PIPELINE.md  config.yaml  download_plantvillage.py  export_to_tflite.py  export_torchscript.py  finetune_new_plant_dataset.py  labels.json  labels.txt  metadata.json  prepare_real_world_dataset.py  prepare_unknown_dataset.py  pyproject.toml  requirements.txt
SourceCode/configs/: __init__.py  config.yaml
SourceCode/reports/new_dataset_evaluation/: classification_report.json  classification_report.txt  confusion_matrix.csv  summary.json  worst_recall_classes.csv
SourceCode/src/: __init__.py  evaluate_and_convert.py  gradcam.py  inference.py  logging_config.py  metadata.py  quality_validator.py  train.py
SourceCode/src/preprocessing/: __init__.py  generate_background_noise.py  preprocess.py
SourceCode/tests/: __init__.py  conftest.py  test_config.py  test_export.py  test_inference.py  test_metadata.py  test_preprocessing.py  test_quality_validator.py
(+50 files in other folders)
